detect language injection correctly in varargs method calls (IDEA-157517)